--- a/views/newindex.hbs
+++ b/views/newindex.hbs
@@ -84,9 +84,13 @@
               </div>
               <div class="field your-date form-group">
                 <input type="text" name="date" placeholder="Date" class="cform-text" size="40" data-rule="required" data-msg="Please enter the arrival date">
-                
+
                 <div class="panel panel-default">
 <div class="panel-body"><label>Select Type of Load</label> <select class="form-control" name="typeofload" required=""><option selected="selected" value="select one">- select one -</option><option value="large">Large</option><option value="small">Small</option><option value="meduim">Meduim</option></select></div>
+</div>
+
+<div class="panel panel-default">
+<div class="panel-body"><label>Select Customer Segment</label> <select class="form-control" name="typeofcustomer" required=""><option selected="selected" value="select one">- select one -</option><option value="VIP">VIP</option><option value="loyalCustomer">Loyal Customer</option></select></div>
 </div>
               <div class="send-btn">
                 <input type="submit" value="Submit" class="btn btn-theme">
